--- a/app/app.yaml
+++ b/app/app.yaml
@@ -3,6 +3,7 @@ modules:
     config:
       "@type": cosmos.app.runtime.v1alpha1.Module
       app_name: AxmApp
+      pre_blockers: [ upgrade ]
       # During begin block slashing happens after distr.BeginBlocker so that
       # there is nothing left over in the validator fee pool, so as to keep the CanWithdrawInvariant invariant.
       # NOTE: staking module is required if HistoricalEntries param > 0
